# fastapi-practice

./: Dockerfile  database.db  log.txt  main.py  pyproject.toml  test_main.py  test_websocket.py
app/: dependencies.py  main.py  test_main.py
app/routers/: items.py
