[project]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "orjson (>=3.11.4,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "strawberry-graphql (>=0.285.0,<0.286.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
